Fix z-index on the composition photo

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -136,7 +136,7 @@ body { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1.6rem; lin
 
 .composition { position: relative; }
 
-.composition__photo { width: 55%; box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4); border-radius: 2px; position: absolute; z-index: 10; transition: all .2s; outline-offset: 2rem; }
+.composition__photo { width: 55%; box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4); border-radius: 2px; position: absolute; z-index: 9; transition: all .2s; outline-offset: 2rem; }
 
 .composition__photo--p1 { left: 0; top: -2rem; }
 
