--- a/src/sass/components/_composition.scss
+++ b/src/sass/components/_composition.scss
@@ -6,7 +6,7 @@
         box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
         border-radius: 2px;
         position: absolute;
-        z-index: 10;
+        z-index: 9;
         transition: all .2s;
         outline-offset: 2rem;
 
